# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-07-16 15:31:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-97

    Summary:
      merge STL improvement from the 0.8 branch
    Revision:
      itools--main--0.9--patch-97

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-99
       xml, now the character ":" is allowed in STL expressions
    

    modified files:
     Changelog xml/STL.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.8--patch-99


2005-07-16 15:26:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-96

    Summary:
      html, add 'selected' to the list of boolean attributes
    Revision:
      itools--main--0.9--patch-96

    The list must be finished!

    modified files:
     Changelog html/parser.py


2005-07-14 19:59:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-95

    Summary:
      catalog, fix un-indexing
    Revision:
      itools--main--0.9--patch-95


    modified files:
     Changelog catalog/IIndex.py


2005-07-13 16:14:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-94

    Summary:
      fix "get_abspath" for Windows
    Revision:
      itools--main--0.9--patch-94


    modified files:
     Changelog __init__.py


2005-06-24 12:51:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-93

    Summary:
      get ready to release 0.9.2
    Revision:
      itools--main--0.9--patch-93


    modified files:
     CHANGES.txt Changelog setup.py


2005-06-17 11:59:59 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-92

    Summary:
      xml, remove obsolete and confusing RDF module
    Revision:
      itools--main--0.9--patch-92


    removed files:
     xml/.arch-ids/RDF.py.id xml/RDF.py

    modified files:
     Changelog


2005-06-17 11:24:35 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-91

    Summary:
      xml, fixing "get_start_tag" and "get_end_tag"
    Revision: