@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-07-16 17:59:27 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-98
+
+    Summary:
+      xhtml, fix "translate" for empy elements
+    Revision:
+      itools--main--0.9--patch-98
+
+
+    modified files:
+     Changelog xhtml/XHTML.py xml/XML.py
+
+
 2005-07-16 15:31:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-97
 
     Summary:
